--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/public/icon.svg"
+      href="/icon.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Colombia Explorer | Descubre el Paraíso</title>
